--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,16 @@
     text-transform: none;
   }
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 30s linear infinite;
+}
